cmd/Idl/y.output

0: shift/reduce conflict (shift 46(0), red'n 2(0)) on HashDefine
0: shift/reduce conflict (shift 65(0), red'n 2(0)) on Annotation
0: shift/reduce conflict (shift 61(0), red'n 2(0)) on RWabstract
0: shift/reduce conflict (shift 68(0), red'n 2(0)) on RWbitset
0: shift/reduce conflict (shift 58(0), red'n 2(0)) on RWcomponent
0: shift/reduce conflict (shift 64(0), red'n 2(0)) on RWconnector
0: shift/reduce conflict (shift 23(0), red'n 2(0)) on RWconst
0: shift/reduce conflict (shift 27(0), red'n 2(0)) on RWexception
0: shift/reduce conflict (shift 67(0), red'n 2(0)) on RWenum
0: shift/reduce conflict (shift 62(0), red'n 2(0)) on RWeventtype
0: shift/reduce conflict (shift 59(0), red'n 2(0)) on RWhome
0: shift/reduce conflict (shift 35(0), red'n 2(0)) on RWimport
0: shift/reduce conflict (shift 69(0), red'n 2(0)) on RWinterface
0: shift/reduce conflict (shift 70(0), red'n 2(0)) on RWlocal
0: shift/reduce conflict (shift 22(0), red'n 2(0)) on RWmodule
0: shift/reduce conflict (shift 51(0), red'n 2(0)) on RWnative
0: shift/reduce conflict (shift 63(0), red'n 2(0)) on RWporttype
0: shift/reduce conflict (shift 72(0), red'n 2(0)) on RWstruct
0: shift/reduce conflict (shift 52(0), red'n 2(0)) on RWtypedef
0: shift/reduce conflict (shift 33(0), red'n 2(0)) on RWtypeid
0: shift/reduce conflict (shift 34(0), red'n 2(0)) on RWtypeprefix
0: shift/reduce conflict (shift 71(0), red'n 2(0)) on RWvaluetype
 0: reduce/reduce conflict  (red'ns 2 and 375) on ';'
 0: reduce/reduce conflict  (red'ns 2 and 445) on ';'
state 0
	$accept: .specification $end 
	definitionPlus: .    (2)
	event_dcl: .    (375)
	bitmask_dcl: .    (445)

	HashDefine  shift 46
	Annotation  shift 65
	RWabstract  shift 61
	RWbitset  shift 68
	RWcomponent  shift 58
	RWconnector  shift 64
	RWconst  shift 23
	RWexception  shift 27
	RWenum  shift 67
	RWeventtype  shift 62
	RWhome  shift 59
	RWimport  shift 35
	RWinterface  shift 69
	RWlocal  shift 70
	RWmodule  shift 22
	RWnative  shift 51
	RWporttype  shift 63
	RWstruct  shift 72
	RWtypedef  shift 52
	RWtypeid  shift 33
	RWtypeprefix  shift 34
	RWvaluetype  shift 71
	.  reduce 2 (src line 193)

	struct_def  goto 66
	struct_dcl  goto 47
	constr_type_dcl  goto 24
	type_dcl  goto 6
	definition  goto 3
	const_dcl  goto 5
	enum_dcl  goto 48
	typedef_dcl  goto 26
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	DefineExpression  goto 21
	except_dcl  goto 7
	interface_dcl  goto 8
	value_dcl  goto 9
	type_id_dcl  goto 10
	type_prefix_dcl  goto 11
	import_dcl  goto 12
	component_dcl  goto 13
	home_dcl  goto 14
	event_dcl  goto 15
	porttype_dcl  goto 16
	connector_dcl  goto 17
	template_module_dcl  goto 18
	template_module_inst  goto 19
	annotation_dcl  goto 20
	module_dcl  goto 4
	definitionPlus  goto 2
	specification  goto 1
	native_dcl  goto 25
	interface_def  goto 28
	interface_forward_dcl  goto 29
	interface_header  goto 53
	interface_kind  goto 54
	value_def  goto 30
	value_forward_dcl  goto 31
	value_box_def  goto 32
	value_header  goto 55
	value_kind  goto 56
	component_def  goto 36
	component_forward_dcl  goto 37
	component_header  goto 57
	home_header  goto 38
	event_def  goto 39
	event_abs_def  goto 40
	event_forward_dcl  goto 41
	event_header  goto 60
	porttype_def  goto 42
	porttype_forward_dcl  goto 43
	connector_header  goto 44
	annotation_header  goto 45

state 1
	$accept:  specification.$end 

	$end  accept
	.  error


 2: reduce/reduce conflict  (red'ns 375 and 445) on ';'
state 2
	specification:  definitionPlus.    (1)
	definitionPlus:  definitionPlus.definition 
	event_dcl: .    (375)
	bitmask_dcl: .    (445)

	HashDefine  shift 46
	Annotation  shift 65
	RWabstract  shift 61
	RWbitset  shift 68
	RWcomponent  shift 58
	RWconnector  shift 64
	RWconst  shift 23
	RWexception  shift 27
	RWenum  shift 67
	RWeventtype  shift 62
	RWhome  shift 59
	RWimport  shift 35
	RWinterface  shift 69
	RWlocal  shift 70
	RWmodule  shift 22
	RWnative  shift 51
	RWporttype  shift 63
	RWstruct  shift 72
	RWtypedef  shift 52
	RWtypeid  shift 33
	RWtypeprefix  shift 34
	RWvaluetype  shift 71
	';'  reduce 375 (src line 2536)
	.  reduce 1 (src line 186)

	struct_def  goto 66
	struct_dcl  goto 47
	constr_type_dcl  goto 24
	type_dcl  goto 6
	definition  goto 73
	const_dcl  goto 5
	enum_dcl  goto 48
	typedef_dcl  goto 26
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	DefineExpression  goto 21
	except_dcl  goto 7
	interface_dcl  goto 8
	value_dcl  goto 9
	type_id_dcl  goto 10
	type_prefix_dcl  goto 11
	import_dcl  goto 12
	component_dcl  goto 13
	home_dcl  goto 14
	event_dcl  goto 15
	porttype_dcl  goto 16
	connector_dcl  goto 17
	template_module_dcl  goto 18
	template_module_inst  goto 19
	annotation_dcl  goto 20
	module_dcl  goto 4
	native_dcl  goto 25
	interface_def  goto 28
	interface_forward_dcl  goto 29
	interface_header  goto 53
	interface_kind  goto 54
	value_def  goto 30
	value_forward_dcl  goto 31
	value_box_def  goto 32
	value_header  goto 55
	value_kind  goto 56
	component_def  goto 36
	component_forward_dcl  goto 37
	component_header  goto 57
	home_header  goto 38
	event_def  goto 39
	event_abs_def  goto 40
	event_forward_dcl  goto 41
	event_header  goto 60
	porttype_def  goto 42
	porttype_forward_dcl  goto 43
	connector_header  goto 44
	annotation_header  goto 45

state 3
	definitionPlus:  definition.    (3)

	.  reduce 3 (src line 195)


state 4
	definition:  module_dcl.';' 

	';'  shift 74
	.  error


state 5
	definition:  const_dcl.';' 

	';'  shift 75
	.  error


state 6
	definition:  type_dcl.';' 

	';'  shift 76
	.  error


state 7
	definition:  except_dcl.';' 

	';'  shift 77
	.  error


state 8
	definition:  interface_dcl.';' 

	';'  shift 78
	.  error


state 9
	definition:  value_dcl.';' 

	';'  shift 79
	.  error


state 10
	definition:  type_id_dcl.';' 

	';'  shift 80
	.  error


state 11
	definition:  type_prefix_dcl.';' 

	';'  shift 81
	.  error


state 12
	definition:  import_dcl.';' 

	';'  shift 82
	.  error


state 13
	definition:  component_dcl.';' 

	';'  shift 83
	.  error


state 14
	definition:  home_dcl.';' 

	';'  shift 84
	.  error


state 15
	definition:  event_dcl.';' 

	';'  shift 85
	.  error


state 16
	definition:  porttype_dcl.';' 

	';'  shift 86
	.  error


state 17
	definition:  connector_dcl.';' 

	';'  shift 87
	.  error


state 18
	definition:  template_module_dcl.';' 

	';'  shift 88
	.  error


state 19
	definition:  template_module_inst.';' 

	';'  shift 89
	.  error


state 20
	definition:  annotation_dcl.';' 

	';'  shift 90
	.  error


state 21
	definition:  DefineExpression.    (22)

	.  reduce 22 (src line 225)


state 22
	module_dcl:  RWmodule.Identifier '{' definitionPlus '}' 
	module_dcl:  RWmodule.Identifier '{' '}' 
	template_module_dcl:  RWmodule.Identifier '<' formal_parameters '>' '{' tpl_definitionPlus '}' 
	template_module_inst:  RWmodule.scoped_name '<' actual_parameters '>' Identifier 

	ScopeOp  shift 93
	Identifier  shift 91
	.  error

	scoped_name  goto 92

state 23
	const_dcl:  RWconst.const_type Identifier '=' const_expr 

	RWstring  shift 113
	RWbyte  shift 133
	ScopeOp  shift 93
	Identifier  shift 114
	RWboolean  shift 110
	RWdouble  shift 107
	RWfixed  shift 109
	RWfloat  shift 104
	RWfloat32  shift 105
	RWfloat64  shift 106
	RWlong  shift 108
	RWoctet  shift 112
	RWshort  shift 123
	RWunsigned  shift 128
	RWint8  shift 127
	RWuint8  shift 132
	RWint16  shift 124
	RWint32  shift 125
	RWint64  shift 126
	RWuint16  shift 129
	RWuint32  shift 130
	RWuint64  shift 131
	RWbool  shift 111
	.  error

	scoped_name  goto 101
	const_type  goto 94
	integer_type  goto 95
	signed_short_int  goto 115
	signed_long_int  goto 116
	signed_longlong_int  goto 117
	unsigned_short_int  goto 119
	unsigned_long_int  goto 120
	signed_tiny_int  goto 118
	unsigned_tiny_int  goto 122
	signed_int  goto 102
	floating_pt_type  goto 96
	fixed_pt_const_type  goto 97
	boolean_type  goto 98
	octet_type  goto 99
	string_type  goto 100
	unsigned_int  goto 103
	unsigned_longlong_int  goto 121

state 24
	type_dcl:  constr_type_dcl.    (88)

	.  reduce 88 (src line 672)


state 25
	type_dcl:  native_dcl.    (89)

	.  reduce 89 (src line 678)


state 26
	type_dcl:  typedef_dcl.    (90)

	.  reduce 90 (src line 681)


state 27
	except_dcl:  RWexception.Identifier '{' memberStar '}' 

	Identifier  shift 134
	.  error


state 28
	interface_dcl:  interface_def.    (200)

	.  reduce 200 (src line 1839)


state 29
	interface_dcl:  interface_forward_dcl.    (201)

	.  reduce 201 (src line 1843)


state 30
	value_dcl:  value_def.    (256)

	.  reduce 256 (src line 2063)


state 31
	value_dcl:  value_forward_dcl.    (257)

	.  reduce 257 (src line 2067)


state 32
	value_dcl:  value_box_def.    (258)

	.  reduce 258 (src line 2070)


state 33
	type_id_dcl:  RWtypeid.scoped_name String_literal 

	ScopeOp  shift 93
	Identifier  shift 114
	.  error

	scoped_name  goto 135

state 34
	type_prefix_dcl:  RWtypeprefix.scoped_name String_literal 

	ScopeOp  shift 93
	Identifier  shift 114
	.  error

	scoped_name  goto 136

state 35
	import_dcl:  RWimport.imported_scope 

	ScopeOp  shift 93
	String_literal  shift 139
	Identifier  shift 114
	.  error

	scoped_name  goto 138
	imported_scope  goto 137

state 36
	component_dcl:  component_def.    (314)

	.  reduce 314 (src line 2295)


state 37
	component_dcl:  component_forward_dcl.    (315)

	.  reduce 315 (src line 2299)


state 38
	home_dcl:  home_header.'{' home_body '}' 

	'{'  shift 140
	.  error


state 39
	event_dcl:  event_def.    (376)

	.  reduce 376 (src line 2539)


state 40
	event_dcl:  event_abs_def.    (377)

	.  reduce 377 (src line 2542)


state 41
	event_dcl:  event_forward_dcl.    (378)

	.  reduce 378 (src line 2545)


state 42
	porttype_dcl:  porttype_def.    (386)

	.  reduce 386 (src line 2578)


state 43
	porttype_dcl:  porttype_forward_dcl.    (387)

	.  reduce 387 (src line 2582)


state 44
	connector_dcl:  connector_header.'{' connector_exportPlus '}' 

	'{'  shift 141
	.  error


state 45
	annotation_dcl:  annotation_header.'{' annotation_body '}' 

	'{'  shift 142
	.  error


state 46
	DefineExpression:  HashDefine.Identifier 
	DefineExpression:  HashDefine.Identifier const_expr 
	DefineExpression:  HashDefine.Identifier '(' IdentifierStar ')' hp 

	Identifier  shift 143
	.  error


state 47
	constr_type_dcl:  struct_dcl.    (141)

	.  reduce 141 (src line 1270)


state 48
	constr_type_dcl:  enum_dcl.    (142)

	.  reduce 142 (src line 1276)


state 49
	constr_type_dcl:  bitset_dcl.    (143)

	.  reduce 143 (src line 1281)


state 50
	constr_type_dcl:  bitmask_dcl.    (144)

	.  reduce 144 (src line 1284)


state 51
	native_dcl:  RWnative.simple_declarator 

	Identifier  shift 145
	.  error

	simple_declarator  goto 144

52: shift/reduce conflict (shift 114(0), red'n 445(0)) on Identifier
state 52
	typedef_dcl:  RWtypedef.type_declarator 
	bitmask_dcl: .    (445)

	RWstring  shift 113
	RWbyte  shift 133
	ScopeOp  shift 93
	Identifier  shift 114
	RWany  shift 166
	RWbitset  shift 68
	RWboolean  shift 110
	RWdouble  shift 107
	RWenum  shift 67
	RWfixed  shift 164
	RWfloat  shift 104
	RWfloat32  shift 105
	RWfloat64  shift 106
	RWlong  shift 108
	RWmap  shift 165
	RWObject  shift 167
	RWoctet  shift 112
	RWsequence  shift 163
	RWshort  shift 123
	RWstruct  shift 72
	RWunsigned  shift 128
	RWValueBase  shift 168
	RWint8  shift 127
	RWuint8  shift 132
	RWint16  shift 124
	RWint32  shift 125
	RWint64  shift 126
	RWuint16  shift 129
	RWuint32  shift 130
	RWuint64  shift 131
	RWbool  shift 111
	.  error

	scoped_name  goto 151
	struct_def  goto 66
	struct_dcl  goto 47
	constr_type_dcl  goto 149
	enum_dcl  goto 48
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	integer_type  goto 156
	base_type_spec  goto 150
	simple_type_spec  goto 147
	signed_short_int  goto 115
	signed_long_int  goto 116
	signed_longlong_int  goto 117
	unsigned_short_int  goto 119
	unsigned_long_int  goto 120
	signed_tiny_int  goto 118
	unsigned_tiny_int  goto 122
	signed_int  goto 102
	floating_pt_type  goto 157
	boolean_type  goto 158
	octet_type  goto 159
	string_type  goto 153
	any_type  goto 160
	object_type  goto 161
	value_base_type  goto 162
	unsigned_int  goto 103
	unsigned_longlong_int  goto 121
	sequence_type  goto 152
	template_type_spec  goto 148
	fixed_pt_type  goto 154
	map_type  goto 155
	type_declarator  goto 146

state 53
	interface_def:  interface_header.'{' interface_body '}' 

	'{'  shift 169
	.  error


state 54
	interface_forward_dcl:  interface_kind.Identifier 
	interface_header:  interface_kind.Identifier 
	interface_header:  interface_kind.Identifier interface_inheritance_spec 

	Identifier  shift 170
	.  error


state 55
	value_def:  value_header.'{' value_elementStar '}' 

	'{'  shift 171
	.  error


state 56
	value_header:  value_kind.Identifier value_inheritance_spec 
	value_header:  value_kind.Identifier 
	value_forward_dcl:  value_kind.Identifier 
	value_box_def:  value_kind.Identifier type_spec 

	Identifier  shift 172
	.  error


state 57
	component_def:  component_header.'{' component_body '}' 

	'{'  shift 173
	.  error


state 58
	component_forward_dcl:  RWcomponent.Identifier 
	component_header:  RWcomponent.Identifier 
	component_header:  RWcomponent.Identifier component_inheritance_spec 
	component_header:  RWcomponent.Identifier supported_interface_spec 
	component_header:  RWcomponent.Identifier component_inheritance_spec supported_interface_spec 

	Identifier  shift 174
	.  error


state 59
	home_header:  RWhome.Identifier RWmanages scoped_name 
	home_header:  RWhome.Identifier home_inheritance_spec RWmanages scoped_name 
	home_header:  RWhome.Identifier RWmanages scoped_name 
	home_header:  RWhome.Identifier RWmanages scoped_name primary_key_spec 
	home_header:  RWhome.Identifier supported_interface_spec RWmanages scoped_name 
	home_header:  RWhome.Identifier supported_interface_spec RWmanages scoped_name primary_key_spec 
	home_header:  RWhome.Identifier home_inheritance_spec RWmanages scoped_name 
	home_header:  RWhome.Identifier home_inheritance_spec RWmanages scoped_name primary_key_spec 
	home_header:  RWhome.Identifier home_inheritance_spec supported_interface_spec RWmanages scoped_name 
	home_header:  RWhome.Identifier home_inheritance_spec supported_interface_spec RWmanages scoped_name primary_key_spec 

	Identifier  shift 175
	.  error


state 60
	event_def:  event_header.'{' value_elementStar '}' 

	'{'  shift 176
	.  error


state 61
	interface_kind:  RWabstract.RWinterface 
	value_kind:  RWabstract.RWvaluetype 
	event_forward_dcl:  RWabstract.RWeventtype Identifier 
	event_abs_def:  RWabstract.RWeventtype Identifier '{' exportStar '}' 
	event_abs_def:  RWabstract.RWeventtype Identifier value_inheritance_spec '{' exportStar '}' 

	RWeventtype  shift 179
	RWinterface  shift 177
	RWvaluetype  shift 178
	.  error


state 62
	event_forward_dcl:  RWeventtype.Identifier 
	event_header:  RWeventtype.Identifier 
	event_header:  RWeventtype.Identifier value_inheritance_spec 

	Identifier  shift 180
	.  error


state 63
	porttype_forward_dcl:  RWporttype.Identifier 
	porttype_def:  RWporttype.Identifier '{' port_body '}' 

	Identifier  shift 181
	.  error


state 64
	connector_header:  RWconnector.Identifier 
	connector_header:  RWconnector.Identifier connector_inherit_spec 

	Identifier  shift 182
	.  error


state 65
	annotation_header:  Annotation.Identifier 

	Identifier  shift 183
	.  error


state 66
	struct_dcl:  struct_def.    (145)

	.  reduce 145 (src line 1289)


state 67
	enum_dcl:  RWenum.'<' const_type ',' Integer_literal '>' Identifier '{' '}' 
	enum_dcl:  RWenum.'<' const_type ',' Integer_literal '>' Identifier '{' enumerators '}' 

	'<'  shift 184
	.  error


state 68
	bitset_dcl:  RWbitset.Identifier '{' bitfieldStar '}' 
	bitset_dcl:  RWbitset.Identifier ':' scoped_name '{' bitfieldStar '}' 

	Identifier  shift 185
	.  error


state 69
	interface_kind:  RWinterface.    (206)

	.  reduce 206 (src line 1869)


state 70
	interface_kind:  RWlocal.RWinterface 

	RWinterface  shift 186
	.  error


state 71
	value_kind:  RWvaluetype.    (262)

	.  reduce 262 (src line 2095)


state 72
	struct_def:  RWstruct.'<' literal ',' String_literal '>' Identifier '{' memberStar '}' 

	'<'  shift 187
	.  error


state 73
	definitionPlus:  definitionPlus definition.    (4)

	.  reduce 4 (src line 201)


state 74
	definition:  module_dcl ';'.    (5)

	.  reduce 5 (src line 207)


state 75
	definition:  const_dcl ';'.    (6)

	.  reduce 6 (src line 209)


state 76
	definition:  type_dcl ';'.    (7)

	.  reduce 7 (src line 210)


state 77
	definition:  except_dcl ';'.    (8)

	.  reduce 8 (src line 211)


state 78
	definition:  interface_dcl ';'.    (9)

	.  reduce 9 (src line 212)


state 79
	definition:  value_dcl ';'.    (10)

	.  reduce 10 (src line 213)


state 80
	definition:  type_id_dcl ';'.    (11)

	.  reduce 11 (src line 214)


state 81
	definition:  type_prefix_dcl ';'.    (12)

	.  reduce 12 (src line 215)


state 82
	definition:  import_dcl ';'.    (13)

	.  reduce 13 (src line 216)


state 83
	definition:  component_dcl ';'.    (14)

	.  reduce 14 (src line 217)


state 84
	definition:  home_dcl ';'.    (15)

	.  reduce 15 (src line 218)


state 85
	definition:  event_dcl ';'.    (16)

	.  reduce 16 (src line 219)


state 86
	definition:  porttype_dcl ';'.    (17)

	.  reduce 17 (src line 220)


state 87
	definition:  connector_dcl ';'.    (18)

	.  reduce 18 (src line 221)


state 88
	definition:  template_module_dcl ';'.    (19)

	.  reduce 19 (src line 222)


state 89
	definition:  template_module_inst ';'.    (20)

	.  reduce 20 (src line 223)


state 90
	definition:  annotation_dcl ';'.    (21)

	.  reduce 21 (src line 224)


91: shift/reduce conflict (shift 189(0), red'n 41(0)) on '<'
state 91
	module_dcl:  RWmodule Identifier.'{' definitionPlus '}' 
	module_dcl:  RWmodule Identifier.'{' '}' 
	scoped_name:  Identifier.    (41)
	template_module_dcl:  RWmodule Identifier.'<' formal_parameters '>' '{' tpl_definitionPlus '}' 

	'{'  shift 188
	'<'  shift 189
	.  reduce 41 (src line 323)


state 92
	scoped_name:  scoped_name.ScopeOp Identifier 
	template_module_inst:  RWmodule scoped_name.'<' actual_parameters '>' Identifier 

	ScopeOp  shift 190
	'<'  shift 191
	.  error


state 93
	scoped_name:  ScopeOp.Identifier 

	Identifier  shift 192
	.  error


state 94
	const_dcl:  RWconst const_type.Identifier '=' const_expr 

	Identifier  shift 193
	.  error


state 95
	const_type:  integer_type.    (45)

	.  reduce 45 (src line 358)


state 96
	const_type:  floating_pt_type.    (46)

	.  reduce 46 (src line 364)


state 97
	const_type:  fixed_pt_const_type.    (47)

	.  reduce 47 (src line 369)


state 98
	const_type:  boolean_type.    (48)

	.  reduce 48 (src line 374)


state 99
	const_type:  octet_type.    (49)

	.  reduce 49 (src line 379)


state 100
	const_type:  string_type.    (50)

	.  reduce 50 (src line 384)


state 101
	scoped_name:  scoped_name.ScopeOp Identifier 
	const_type:  scoped_name.    (51)

	ScopeOp  shift 190
	.  reduce 51 (src line 390)


state 102
	integer_type:  signed_int.    (107)

	.  reduce 107 (src line 857)


state 103
	integer_type:  unsigned_int.    (108)

	.  reduce 108 (src line 863)


state 104
	floating_pt_type:  RWfloat.    (102)

	.  reduce 102 (src line 753)


state 105
	floating_pt_type:  RWfloat32.    (103)

	.  reduce 103 (src line 776)


state 106
	floating_pt_type:  RWfloat64.    (104)

	.  reduce 104 (src line 798)


state 107
	floating_pt_type:  RWdouble.    (105)

	.  reduce 105 (src line 821)


state 108
	floating_pt_type:  RWlong.RWdouble 
	signed_long_int:  RWlong.    (115)
	signed_longlong_int:  RWlong.RWlong 

	RWdouble  shift 194
	RWlong  shift 195
	.  reduce 115 (src line 930)


state 109
	fixed_pt_const_type:  RWfixed.    (140)

	.  reduce 140 (src line 1265)


state 110
	boolean_type:  RWboolean.    (129)

	.  reduce 129 (src line 1140)


state 111
	boolean_type:  RWbool.    (130)

	.  reduce 130 (src line 1158)


state 112
	octet_type:  RWoctet.    (131)

	.  reduce 131 (src line 1177)


state 113
	string_type:  RWstring.    (138)

	.  reduce 138 (src line 1242)


state 114
	scoped_name:  Identifier.    (41)

	.  reduce 41 (src line 323)


state 115
	signed_int:  signed_short_int.    (109)

	.  reduce 109 (src line 870)


state 116
	signed_int:  signed_long_int.    (110)

	.  reduce 110 (src line 876)


state 117
	signed_int:  signed_longlong_int.    (111)

	.  reduce 111 (src line 881)


state 118
	signed_int:  signed_tiny_int.    (112)

	.  reduce 112 (src line 886)


state 119
	unsigned_int:  unsigned_short_int.    (119)

	.  reduce 119 (src line 1007)


state 120
	unsigned_int:  unsigned_long_int.    (120)

	.  reduce 120 (src line 1013)


state 121
	unsigned_int:  unsigned_longlong_int.    (121)

	.  reduce 121 (src line 1018)


state 122
	unsigned_int:  unsigned_tiny_int.    (122)

	.  reduce 122 (src line 1023)


state 123
	signed_short_int:  RWshort.    (113)

	.  reduce 113 (src line 892)


state 124
	signed_short_int:  RWint16.    (114)

	.  reduce 114 (src line 911)


state 125
	signed_long_int:  RWint32.    (116)

	.  reduce 116 (src line 949)


state 126
	signed_longlong_int:  RWint64.    (118)

	.  reduce 118 (src line 989)


state 127
	signed_tiny_int:  RWint8.    (448)

	.  reduce 448 (src line 2751)


state 128
	unsigned_short_int:  RWunsigned.RWshort 
	unsigned_long_int:  RWunsigned.RWlong 
	unsigned_longlong_int:  RWunsigned.RWlong RWlong 

	RWlong  shift 197
	RWshort  shift 196
	.  error


state 129
	unsigned_short_int:  RWuint16.    (124)

	.  reduce 124 (src line 1048)


state 130
	unsigned_long_int:  RWuint32.    (126)

	.  reduce 126 (src line 1085)


state 131
	unsigned_longlong_int:  RWuint64.    (128)

	.  reduce 128 (src line 1122)


state 132
	unsigned_tiny_int:  RWuint8.    (449)

	.  reduce 449 (src line 2769)


state 133
	unsigned_tiny_int:  RWbyte.    (450)

	.  reduce 450 (src line 2792)


state 134
	except_dcl:  RWexception Identifier.'{' memberStar '}' 

	'{'  shift 198
	.  error


state 135
	scoped_name:  scoped_name.ScopeOp Identifier 
	type_id_dcl:  RWtypeid scoped_name.String_literal 

	ScopeOp  shift 190
	String_literal  shift 199
	.  error


state 136
	scoped_name:  scoped_name.ScopeOp Identifier 
	type_prefix_dcl:  RWtypeprefix scoped_name.String_literal 

	ScopeOp  shift 190
	String_literal  shift 200
	.  error


state 137
	import_dcl:  RWimport imported_scope.    (295)

	.  reduce 295 (src line 2219)


state 138
	scoped_name:  scoped_name.ScopeOp Identifier 
	imported_scope:  scoped_name.    (296)

	ScopeOp  shift 190
	.  reduce 296 (src line 2224)


state 139
	imported_scope:  String_literal.    (297)

	.  reduce 297 (src line 2228)


140: shift/reduce conflict (shift 113(0), red'n 352(0)) on RWstring
140: shift/reduce conflict (shift 133(0), red'n 352(0)) on RWbyte
140: shift/reduce conflict (shift 93(0), red'n 352(0)) on ScopeOp
140: shift/reduce conflict (shift 114(0), red'n 352(0)) on Identifier
140: shift/reduce conflict (shift 166(0), red'n 352(0)) on RWany
140: shift/reduce conflict (shift 226(0), red'n 352(0)) on RWattribute
140: shift/reduce conflict (shift 68(0), red'n 352(0)) on RWbitset
140: shift/reduce conflict (shift 110(0), red'n 352(0)) on RWboolean
140: shift/reduce conflict (shift 23(0), red'n 352(0)) on RWconst
140: shift/reduce conflict (shift 107(0), red'n 352(0)) on RWdouble
140: shift/reduce conflict (shift 27(0), red'n 352(0)) on RWexception
140: shift/reduce conflict (shift 67(0), red'n 352(0)) on RWenum
140: shift/reduce conflict (shift 217(0), red'n 352(0)) on RWfactory
140: shift/reduce conflict (shift 218(0), red'n 352(0)) on RWfinder
140: shift/reduce conflict (shift 164(0), red'n 352(0)) on RWfixed
140: shift/reduce conflict (shift 104(0), red'n 352(0)) on RWfloat
140: shift/reduce conflict (shift 105(0), red'n 352(0)) on RWfloat32
140: shift/reduce conflict (shift 106(0), red'n 352(0)) on RWfloat64
140: shift/reduce conflict (shift 35(0), red'n 352(0)) on RWimport
140: shift/reduce conflict (shift 108(0), red'n 352(0)) on RWlong
140: shift/reduce conflict (shift 165(0), red'n 352(0)) on RWmap
140: shift/reduce conflict (shift 51(0), red'n 352(0)) on RWnative
140: shift/reduce conflict (shift 167(0), red'n 352(0)) on RWObject
140: shift/reduce conflict (shift 112(0), red'n 352(0)) on RWoctet
140: shift/reduce conflict (shift 222(0), red'n 352(0)) on RWoneway
140: shift/reduce conflict (shift 225(0), red'n 352(0)) on RWreadonly
140: shift/reduce conflict (shift 163(0), red'n 352(0)) on RWsequence
140: shift/reduce conflict (shift 123(0), red'n 352(0)) on RWshort
140: shift/reduce conflict (shift 72(0), red'n 352(0)) on RWstruct
140: shift/reduce conflict (shift 52(0), red'n 352(0)) on RWtypedef
140: shift/reduce conflict (shift 33(0), red'n 352(0)) on RWtypeid
140: shift/reduce conflict (shift 34(0), red'n 352(0)) on RWtypeprefix
140: shift/reduce conflict (shift 128(0), red'n 352(0)) on RWunsigned
140: shift/reduce conflict (shift 168(0), red'n 352(0)) on RWValueBase
140: shift/reduce conflict (shift 224(0), red'n 352(0)) on RWvoid
140: shift/reduce conflict (shift 127(0), red'n 352(0)) on RWint8
140: shift/reduce conflict (shift 132(0), red'n 352(0)) on RWuint8
140: shift/reduce conflict (shift 124(0), red'n 352(0)) on RWint16
140: shift/reduce conflict (shift 125(0), red'n 352(0)) on RWint32
140: shift/reduce conflict (shift 126(0), red'n 352(0)) on RWint64
140: shift/reduce conflict (shift 129(0), red'n 352(0)) on RWuint16
140: shift/reduce conflict (shift 130(0), red'n 352(0)) on RWuint32
140: shift/reduce conflict (shift 131(0), red'n 352(0)) on RWuint64
140: shift/reduce conflict (shift 111(0), red'n 352(0)) on RWbool
 140: reduce/reduce conflict  (red'ns 352 and 445) on ';'
state 140
	home_dcl:  home_header '{'.home_body '}' 
	home_exportStar: .    (352)
	bitmask_dcl: .    (445)

	RWstring  shift 113
	RWbyte  shift 133
	ScopeOp  shift 93
	Identifier  shift 114
	RWany  shift 166
	RWattribute  shift 226
	RWbitset  shift 68
	RWboolean  shift 110
	RWconst  shift 23
	RWdouble  shift 107
	RWexception  shift 27
	RWenum  shift 67
	RWfactory  shift 217
	RWfinder  shift 218
	RWfixed  shift 164
	RWfloat  shift 104
	RWfloat32  shift 105
	RWfloat64  shift 106
	RWimport  shift 35
	RWlong  shift 108
	RWmap  shift 165
	RWnative  shift 51
	RWObject  shift 167
	RWoctet  shift 112
	RWoneway  shift 222
	RWreadonly  shift 225
	RWsequence  shift 163
	RWshort  shift 123
	RWstruct  shift 72
	RWtypedef  shift 52
	RWtypeid  shift 33
	RWtypeprefix  shift 34
	RWunsigned  shift 128
	RWValueBase  shift 168
	RWvoid  shift 224
	RWint8  shift 127
	RWuint8  shift 132
	RWint16  shift 124
	RWint32  shift 125
	RWint64  shift 126
	RWuint16  shift 129
	RWuint32  shift 130
	RWuint64  shift 131
	RWbool  shift 111
	.  reduce 352 (src line 2444)

	scoped_name  goto 151
	struct_def  goto 66
	struct_dcl  goto 47
	constr_type_dcl  goto 24
	type_dcl  goto 209
	const_dcl  goto 210
	enum_dcl  goto 48
	typedef_dcl  goto 26
	bitset_dcl  goto 49
	bitmask_dcl  goto 50
	except_dcl  goto 211
	type_id_dcl  goto 212
	type_prefix_dcl  goto 213
	import_dcl  goto 214
	integer_type  goto 156
	base_type_spec  goto 150
	simple_type_spec  goto 227
	type_spec  goto 223
	signed_short_int  goto 115
	signed_long_int  goto 116
	signed_longlong_int  goto 117
	unsigned_short_int  goto 119
	unsigned_long_int  goto 120
	signed_tiny_int  goto 118
	unsigned_tiny_int  goto 122
	signed_int  goto 102
	floating_pt_type  goto 157
	boolean_type  goto 158
	octet_type  goto 159
	string_type  goto 153
	any_type  goto 160
	object_type  goto 161
	value_base_type  goto 162
	unsigned_int  goto 103
	unsigned_longlong_int  goto 121
	sequence_type  goto 152
	template_type_spec  goto 228
	fixed_pt_type  goto 154
	map_type  goto 155
	native_dcl  goto 25
	export  goto 204
	op_dcl  goto 207
	attr_dcl  goto 208
	op_oneway_dcl  goto 215
	op_with_context  goto 216
	op_type_spec  goto 219
	readonly_attr_spec  goto 220
	attr_spec  goto 221
	home_body  goto 201
	home_exportStar  goto 202
	home_export  goto 203
	factory_dcl  goto 205
	finder_dcl  goto 206

state 141
	connector_dcl:  connector_header '{'.connector_exportPlus '}' 
	connector_exportPlus: .    (403)

	.  reduce 403 (src line 2646)

	connector_exportPlus  goto 229

state 142
	annotation_dcl:  annotation_header '{'.annotation_body '}' 
	annotation_body: .    (458)

	.  reduce 458 (src line 2824)

	annotation_body  goto 230

state 143
	DefineExpression:  HashDefine Identifier.    (23)
	DefineExpression:  HashDefine Identifier.const_expr 
	DefineExpression:  HashDefine Identifier.'(' IdentifierStar ')' hp 
